// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels reducer handles actions -setLastSeen sets last seen for channel 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "advertFee": 0.15,
  },
  Immutable.Map {
    "private": true,
    "name": "Channel 1",
    "unread": 1,
    "lastSeen": "2019-03-07T11:03:48.000Z",
    "advertFee": 0.15,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "address": "zs1testaddress1",
    "description": "Channel about 1",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "advertFee": 0.15,
  },
]
`;

exports[`channels reducer handles actions -setUnread sets unread for channel 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "advertFee": 0.15,
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 2,
    "description": "Channel about 1",
    "advertFee": 0.15,
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "advertFee": 0.15,
  },
]
`;

exports[`channels reducer handles actions -setUnread sets unread for channel 2`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "advertFee": 0.15,
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 2,
    "description": "Channel about 1",
    "advertFee": 0.15,
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "advertFee": 0.15,
  },
]
`;

exports[`channels reducer handles load channels cleans up loading when rejected 1`] = `
Immutable.Record {
  "loading": false,
  "message": "Loading channels",
}
`;

exports[`channels reducer handles load channels when fulfilled 1`] = `
Immutable.List [
  Immutable.Map {
    "private": true,
    "name": "Channel 2",
    "unread": 2,
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "advertFee": 0,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "address": "zs1testaddress2",
    "showInfoMsg": true,
    "description": "",
  },
  Immutable.Map {
    "private": true,
    "name": "Channel 1",
    "unread": 1,
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "advertFee": 0,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "address": "zs1testaddress1",
    "showInfoMsg": true,
    "description": "Channel about 1",
  },
  Immutable.Map {
    "private": true,
    "name": "Channel 0",
    "unread": 0,
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "advertFee": 0,
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "address": "zs1testaddress0",
    "showInfoMsg": true,
    "description": "",
  },
]
`;

exports[`channels reducer handles load channels when pending 1`] = `
Immutable.ChannelsState {
  "data": Immutable.List [],
  "loader": Immutable.Record {
    "loading": true,
    "message": "Loading channels",
  },
}
`;
